[gd_scene load_steps=10 format=3 uid="uid://b3sur1mund8do"]

[ext_resource type="Script" path="res://scripts/start_menu.gd" id="1_gc4qy"]
[ext_resource type="Texture2D" uid="uid://do01181np02sn" path="res://assets/bg/bash cover.jpg" id="1_qr0st"]
[ext_resource type="Texture2D" uid="uid://ddhby5yqvugpk" path="res://assets/ui/IMG_5103.PNG" id="2_0fmtb"]
[ext_resource type="FontFile" uid="uid://dkir0p6c3kexs" path="res://assets/font/VT323-Regular.ttf" id="3_b3ffb"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_aedxj"]
texture = ExtResource("2_0fmtb")
expand_margin_left = 30.0
expand_margin_top = 20.0
expand_margin_right = 30.0
expand_margin_bottom = 20.0
modulate_color = Color(0, 0, 1, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_o6ckp"]
texture = ExtResource("2_0fmtb")
expand_margin_left = 30.0
expand_margin_top = 20.0
expand_margin_right = 30.0
expand_margin_bottom = 20.0
modulate_color = Color(0, 0, 1, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lp7sn"]
texture = ExtResource("2_0fmtb")
expand_margin_left = 30.0
expand_margin_top = 20.0
expand_margin_right = 30.0
expand_margin_bottom = 20.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_584r5"]
texture = ExtResource("2_0fmtb")
expand_margin_left = 30.0
expand_margin_top = 20.0
expand_margin_right = 30.0
expand_margin_bottom = 20.0
modulate_color = Color(0, 1, 0.301961, 1)

[sub_resource type="Theme" id="Theme_nou1x"]
Button/styles/focus = SubResource("StyleBoxTexture_aedxj")
Button/styles/hover = SubResource("StyleBoxTexture_o6ckp")
Button/styles/normal = SubResource("StyleBoxTexture_lp7sn")
Button/styles/pressed = SubResource("StyleBoxTexture_584r5")

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gc4qy")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Background1" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(239, 421)
scale = Vector2(0.49, 0.57)
texture = ExtResource("1_qr0st")

[node name="Container" type="BoxContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.0
offset_top = -50.0
offset_right = -6.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
theme = SubResource("Theme_nou1x")
alignment = 1
vertical = true

[node name="PlayBtn" type="Button" parent="CanvasLayer/Container"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("3_b3ffb")
theme_override_font_sizes/font_size = 24
text = "Play"

[node name="ScoreBtn" type="Button" parent="CanvasLayer/Container"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("3_b3ffb")
theme_override_font_sizes/font_size = 24
text = "Highscore"

[node name="InfoBtn" type="Button" parent="CanvasLayer/Container"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("3_b3ffb")
theme_override_font_sizes/font_size = 24
text = "How to Play"

[node name="CredBtn" type="Button" parent="CanvasLayer/Container"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("3_b3ffb")
theme_override_font_sizes/font_size = 24
text = "Credits"

[node name="QuitBtn" type="Button" parent="CanvasLayer/Container"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("3_b3ffb")
theme_override_font_sizes/font_size = 24
text = "Quit"

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="CanvasLayer/Container/PlayBtn" to="." method="_on_play_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/Container/ScoreBtn" to="." method="_on_score_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/Container/InfoBtn" to="." method="_on_info_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/Container/CredBtn" to="." method="_on_cred_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/Container/QuitBtn" to="." method="_on_quit_btn_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
